test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_25.k
schema Conifg:
    name.attr: str
